Added Stats for TimeInABottle usage

--- a/src/main/resources/assets/timeinabottle/lang/en_us.json
+++ b/src/main/resources/assets/timeinabottle/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.timeinabottle.time_in_a_bottle": "Time in a Bottle" ,
-  "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S"
+  "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
+  "stats.timeinabottle.time_in_a_bottle_usages": "Time in a Bottle Usages"
 }
