--- a/src/main/resources/assets/timeinabottle/lang/es_ar.json
+++ b/src/main/resources/assets/timeinabottle/lang/es_ar.json
@@ -1,4 +1,5 @@
 {
     "item.timeinabottle.time_in_a_bottle": "Tiempo en una Botella" ,
-    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S"
+    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
+    "stats.timeinabottle.time_in_a_bottle_usages": "Uso del Tempo en una Bottella"
 }
