--- a/src/main/resources/assets/timeinabottle/lang/fr_fr.json
+++ b/src/main/resources/assets/timeinabottle/lang/fr_fr.json
@@ -1,4 +1,5 @@
 {
     "item.timeinabottle.time_in_a_bottle": "Temps dans une Bouteille" ,
-    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S"
+    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
+    "stats.timeinabottle.time_in_a_bottle_usages": "Utilisation du Temps dans une Bouteille"
 }
