--- a/src/main/resources/assets/timeinabottle/lang/pt_br.json
+++ b/src/main/resources/assets/timeinabottle/lang/pt_br.json
@@ -1,4 +1,5 @@
 {
     "item.timeinabottle.time_in_a_bottle": "Tempo numa garrafa" ,
-    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S"
+    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
+    "stats.timeinabottle.time_in_a_bottle_usages": "Uso do Tempo numa Garrafa"
 }
