--- a/src/main/resources/assets/timeinabottle/lang/es_es.json
+++ b/src/main/resources/assets/timeinabottle/lang/es_es.json
@@ -1,5 +1,5 @@
 {
     "item.timeinabottle.time_in_a_bottle": "Tiempo en una Botella" ,
     "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
-    "stats.timeinabottle.time_in_a_bottle_usages": "Uso del Tempo en una Bottella"
+    "stat.timeinabottle.time_in_a_bottle_usages": "Uso del Tempo en una Bottella"
 }
