Update to 1.17. NOT TESTED. maybe it works, maybe not, who knows :shrug:

--- a/src/main/resources/assets/timeinabottle/lang/es_ar.json
+++ b/src/main/resources/assets/timeinabottle/lang/es_ar.json
@@ -1,5 +1,4 @@
 {
     "item.timeinabottle.time_in_a_bottle": "Tiempo en una Botella" ,
-    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S",
-    "stat.timeinabottle.time_in_a_bottle_usages": "Uso del Tempo en una Bottella"
+    "item.timeinabottle.time_in_a_bottle.tooltip": "%d H | %d M | %d S"
 }
